grammar.js
		gsql: $ => repeat($._definition),

		_definition: $ =>
			choice(
				$.create_query,
				$.interpret_query
			),

		create_query: $ => seq(
			caseInsensitive("create"),
			optional(
				seq(caseInsensitive("or"), caseInsensitive("replace"))
			),
			optional(caseInsensitive("distributed")),
			caseInsensitive("query"),
			field("queryName", $.name),
			$.parameter_list,
			caseInsensitive("for"),
			caseInsensitive("graph"),
			field("graphName", $.name),
			optional(
				seq(caseInsensitive("syntax"), caseInsensitive("v2"))
			),
			$.query_body
		),


		parameter_list: $ => seq(
			"(",
			repeat($.query_params),
			")"
		),

		query_body: $ =>
			seq(
				"{",
				repeat($.typedef),
				// optional($.declaration_except_stmts),
				repeat($.query_body_stmts),
				"}"
			),

		typedef: $ => seq(
			caseInsensitive("typedef"),
			caseInsensitive("tuple"),
			"<",
			repeat($.tuple_fields),
			">",
			field("tupleType", $.name),
			";"
		),

		tuple_fields: $ => seq(
			$.tuple_field,
			repeat(
				seq(",", $.tuple_field)
			)
		),

		tuple_field: $ => choice(
			seq($.base_type, $.name),
			seq($.name, $.base_type)
		),

		query_body_stmts: $ => seq(
			$.query_body_stmt,
			';'
		),

		query_body_stmt: $ => choice(
			$.assign_stmt,
			$.v_set_var_decl_stmt, //!book
			$.decl_stmt,
			$.l_accum_assign_stmt,
			$.g_accum_assign_stmt,
			$.g_accum_accum_stmt,
			$.func_call_stmt,
			$.select_stmt,
			$.query_body_case_stmt,
			$.query_body_if_stmt,
			$.query_body_while_stmt,
			$.query_body_for_each_stmt,
			caseInsensitive("break"),
			caseInsensitive("continue"),
			// updateStmt ,
			// insertStmt ,
			// queryBodyDeleteStmt ,
			$.print_stmt,
			// printlnStmt ,
			// logStmt ,
			// returnStmt, 
			// raiseStmt ,
			// tryStmt 
		),

		gsql_select_block: $ => seq(
			$.gsql_select_clause,
			$.from_clause,
			// optional($.sample_clause),
			optional($.where_clause),
			optional($.accum_clause),
			repeat($.post_accum_clause),
			// optional($.having_clause),
			// optional($.order_clause),
			optional($.limit_clause),
		),
		gsql_select_clause: $ => seq(
			$.name,
			"=",
			caseInsensitive("select"),
			$.name
		),

		from_clause: $ => seq(
			caseInsensitive("from"),
			choice(
				$.step,
				// $.step_v2,
				seq($.path_pattern, repeat(seq(",", $.path_pattern))),
			)
		),

		path_pattern: $ => prec(1, seq(
			$.step_source_set,
			repeat(seq(
				"-",
				"(",
				$.path_edge_pattern,
				optional(seq(":", field("edgeAlias", $.name))),
				")",
				"-",
				$.step_vertex_set
			))
		)),

		step: $ => seq(
			$.step_source_set,
			optional(seq(
				"-",
				"(",
				$.step_edge_set,
				")",
				"-",
				optional('>'),
				$.step_vertex_set
			))
		),
		step_source_set: $ => prec(1, seq(
			field('vertexSetName', $.name),
			optional(seq(":", field("vertexAlias", $.name)))
		)),

		step_edge_set: $ => seq(
			$.step_edge_types,
			optional(seq(":", field("edgeAlias", $.name)))
		),

		step_edge_types: $ => prec(2, choice(
			$.atomic_edge_type,
			seq("(", $.edge_set_type, repeat(seq(" | ", $.edge_set_type)), ")")
		)),

		atomic_edge_type: $ => choice(
			"_",
			caseInsensitive("any"),
			$.edge_set_type
		),

		edge_set_type: $ => choice(
			$.name,
			$.global_accum_name
		),

		step_vertex_set: $ => seq(
			$.step_vertex_types,
			optional(seq(":", field("vertexAlias", $.name)))
		),

		step_vertex_types: $ => choice(
			$.atomic_vertex_type,
			seq("(", $.vertex_set_type, repeat(seq(" | ", $.vertex_set_type)), ")")
		),
		atomic_vertex_type: $ => choice(
			"_",
			caseInsensitive("any"),
			$.vertex_set_type
		),
		vertex_set_type: $ => choice(
			$.name,
			$.global_accum_name
		),

		base_type: $ => choice(
			caseInsensitive("bool"),
			caseInsensitive("int"),
			caseInsensitive("uint"),
			caseInsensitive("float"),
			caseInsensitive("double"),
			caseInsensitive("string"),
			caseInsensitive("bool"),
			seq(caseInsensitive("vertex"), optional(seq("<", $.name, ">"))),
			caseInsensitive("edge"),
			caseInsensitive("jsonobject"),
			caseInsensitive("jsonarray"),
			caseInsensitive("datetime")
		),

		name: $ => /[\p{L}_$][\p{L}\p{Nd}_$]*/, // thanks, java --> https://github.com/tree-sitter/tree-sitter-java/blob/master/grammar.js#:~:text=%5B%5Cp%7BL%7D_%24%5D%5B%5Cp%7BL%7D%5Cp%7BNd%7D_%24%5D*
